# Finance_RAG

./: .gitignore  README.md  pyproject.toml
data/: inspect.ipynb
demos/: finder.ipynb
main/: __init__.py
main/chunker/: __init__.py  chunker.py
main/encoder/: __init__.py  encoder.py
main/vector_database/: __init__.py  database.py
